--- a/env.example
+++ b/env.example
@@ -1,11 +1,15 @@
 APP_PORT=3000
 APP_HOST=127.0.0.1
 DATABASE_HOST=127.0.0.1
-#DATABASE_HOST=news-db
 DATABASE_PORT=5432
 DATABASE_NAME=news_store
 DATABASE_USER=postgres
 DATABASE_PASSWORD=1999
+
+ACCESS_TOKEN_SECRET=access_secret
+ACCESS_TOKEN_EXPIRATION=3m
+REFRESH_TOKEN_SECRET=refresh_secret
+REFRESH_TOKEN_EXPIRATION=3d
 
 NODE_ENV=dev
 #NODE_ENV=prod
